manifests/media-namespace-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
