manifests/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: eks-app-node
      containers:
      - name: jellyfin
        # 최신 이미지를 사용합니다.
        image: 635014547592.dkr.ecr.us-east-1.amazonaws.com/jellyfin:0328958a72e8a2ef1cceadfaa8b040496f264a6a
        ports:
        - containerPort: 8096
        resources:
          requests:
            cpu: "300m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        startupProbe:
          tcpSocket:
            port: 8096
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 15
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: jellyfin
  annotations:
    # [핵심] 로드밸런서를 인터넷 접속용으로 생성하게 합니다.
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: jellyfin
  ports:
  - protocol: TCP
    port: 80         # 브라우저 접속 포트
    targetPort: 8096 # 젤리핀 서버 포트
  type: LoadBalancer
